Added monashees and styles header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
     <meta content="/img/favicon.png" property="og:image">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
@@ -36,7 +37,10 @@
 
     <header>
       <div class="holder">
-        <h1>Mikael Carrara</h1>
+        <h1>
+          <strong>Mikael Carrara</strong><br>
+          <span>User Interface Designer &amp; Front-end Developer</span>
+        </h1>
         <nav>
           <ul>
             <li><a href="https://www.linkedin.com/in/mikaelcarrara/">Linkedin</a></li>
@@ -50,13 +54,21 @@
     <section class="content">
       <div class="holder">
 
-        ghghgh
+        <h2>Monashees Community</h2>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
+
+        <ul class="screens">
+          <li><img src="./images/monashees/monashees-1.png"></li>
+          <li><img src="./images/monashees/monashees-2.png"></li>
+          <li><img src="./images/monashees/monashees-3.png"></li>
+          <li><img src="./images/monashees/monashees-4.png"></li>
+        </ul>
 
       </div>
     </section> <!-- /content -->
 
     <footer>
-      &copy; 2007/2018 Mikael Carrara.
+      &copy; 2007/2018 Mikael Carrara
     </footer>
 
     <script src="./js/jquery/jquery.js"></script>
