Added ESPN and updated Monashess

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
-    <meta content="/img/favicon.png" property="og:image">
+    <meta content="/img/logo.png" property="og:image">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 
@@ -37,14 +37,18 @@
 
     <header>
       <div class="holder">
+        <img src="./images/logo.png">
         <h1>
           <strong>Mikael Carrara</strong><br>
-          <span>User Interface Designer &amp; Front-end Developer</span>
+          <span>UI Design, Front-end Development</span>
         </h1>
         <nav>
           <ul>
             <li><a href="https://www.linkedin.com/in/mikaelcarrara/">Linkedin</a></li>
             <li><a href="https://dribbble.com/mikaelcarrara">Dribbble</a></li>
+            <li><a href="https://github.com/mikaelcarrara">Github</a></li>
+            <li><a href="https://sourcerer.io/mikaelcarrara">Sourcerer</a></li>
+            <li><a href="https://twitter.com/mikaelcarrara">Twitter</a></li>
           </ul>
         </nav>
         <a class="menu-trigger">Menu</a>
@@ -58,10 +62,29 @@
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
 
         <ul class="screens">
-          <li><img src="./images/monashees/monashees-1.png"></li>
-          <li><img src="./images/monashees/monashees-2.png"></li>
-          <li><img src="./images/monashees/monashees-3.png"></li>
-          <li><img src="./images/monashees/monashees-4.png"></li>
+          <li><img src="./images/monashees/monashees-1.jpg"></li>
+          <li><img src="./images/monashees/monashees-2.jpg"></li>
+          <li><img src="./images/monashees/monashees-3.jpg"></li>
+          <li><img src="./images/monashees/monashees-4.jpg"></li>
+          <li><img src="./images/monashees/monashees-5.jpg"></li>
+          <li><img src="./images/monashees/monashees-6.jpg"></li>
+        </ul>
+        
+        <h2>ESPN Brasil</h2>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
+
+        <ul class="screens">
+          <li><img src="./images/espn/espn-1.jpg"></li>
+          <li><img src="./images/espn/espn-2.jpg"></li>
+          <li><img src="./images/espn/espn-3.jpg"></li>
+          <li><img src="./images/espn/espn-4.jpg"></li>
+          <li><img src="./images/espn/espn-5.jpg"></li>
+          <li><img src="./images/espn/espn-6.jpg"></li>
+          <li><img src="./images/espn/espn-7.jpg"></li>
+          <li><img src="./images/espn/espn-8.jpg"></li>
+          <li><img src="./images/espn/espn-9.jpg"></li>
+          <li><img src="./images/espn/espn-10.jpg"></li>
+          <li><img src="./images/espn/espn-11.jpg"></li>
         </ul>
 
       </div>
