Added Facebook image

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     
     <meta content="Mikael Carrara - UI Design, Front-end Development" property="og:title">
     <meta content="http://www.mikaelcarrara.github.io" property="og:url">
+    <meta content="https://www.dropbox.com/s/f39gr7bgi9tnsoc/facebook.jpg" property="og:image">
 
     <link href="./stylesheet/normalize.css" rel="stylesheet">
     <link href="./stylesheet/unitegallery.css" rel="stylesheet">
