--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="author" content="Mikael Carrara">
     <meta name="copyright" content="© 2018 Mikael Carrara.">
     <link rev="made" href="mikaelmorattocarrara@gmail.com">
-    <meta name="keywords" content="Web Design, Interface Design, UI Design, Product Design, Design, Web Development">
+    <meta name="keywords" content="Web Design, Interface Design, UI Design, Product Design, Design, Web Development, Mobile Development, React Native Development">
 
     <meta content="Mikael Carrara - UI Design, Front-end Development" property="og:title">
     <meta content="http://www.mikaelcarrara.github.io" property="og:url">
